--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -20,7 +20,7 @@
         android:id="@+id/textView"
         android:layout_centerHorizontal="true"
         android:textStyle="normal|bold"
-        android:textSize="20"
+        android:textSize="20dp"
         />
 
 <LinearLayout android:orientation="horizontal"
