--- a/app/src/main/res/layout/activity_contacto.xml
+++ b/app/src/main/res/layout/activity_contacto.xml
@@ -29,7 +29,9 @@
 
     <DatePicker
         android:layout_width="match_parent"
-        android:layout_height="180dp"
+        android:layout_height="100dp"
+        android:datePickerMode="spinner"
+        android:calendarViewShown="false"
         android:id="@+id/fechaPicker"
         />
     <android.support.design.widget.TextInputLayout
